# PySolFC

./: .appveyor.yml  .gitignore  .perltidyrc  .tidyallrc  .travis.yml  AUTHORS  AUTHORS.md  Brewfile  CONTRIBUTING.md  MANIFEST.in  Makefile  NEWS.asciidoc  README  README.android  README.kivy  README.md  README_svg.md  appdata.xml  build-svg-support.bash  firstFile.txt  pysol  pysol.py  run-tests.pl  setup.cfg  setup.py  setup_osx.py
.github/workflows/: ci.yml  macos-package.yml
android/: NOTE  initsdk  initsdk.py  initsupport  main.py  mkcards  mkkeystore  mkp4a.clean  mkp4a.cleanall  mkp4a.common  mkp4a.debug  mkp4a.init  mkp4a.preload  mkp4a.release  mkp4a.unsigned  version.py
android/debian/: README  apt-installs.sh  pip-installs.sh
buildozer/: aversion  build-instructions.txt  buildozer.init  buildozer.run  buildozer.spec  fdroid.init  main.py  minimal.txt  mkcards  pipreq.txt  pubspec.json  resize4k  resizecards  test.py  version  version.py
buildozer/helpers/: avdmanager  setapiforp4a  setbuildvars
contrib/: customize_cardset.asciidoc  customize_cardsets.txt  install-pysolfc.sh
contrib/help-pages-translation-to-french/: all.htm  all_games.html  credits.html  ganjifa.html  gen-html.py  general_rules.html  glossary.html  hanafuda.html  hexadeck.html  howtoplay.html  index.html  install.html  intro.html  license.html  news.html  rules.html  rules_alternate.html
data/: PySol.icns  glade-translations  procexample.txt  pysol.desktop  pysol.xbm  pysol.xpm  pysolfc.glade  pysolfc.gladep
data/html-src/: credits.html  ganjifa.html  gen-html.py  general_rules.html  glossary.html  hexadeck.html  howtoplay.html  license.html  news.html  rules_alternate.html
data/tcl/: clrpick8.4.tcl  clrpick8.5.tcl  fsdialog.tcl  fsdialog8.4.tcl  fsdialog8.5.tcl  menu8.4.tcl
data/tiles/: COPYRIGHT
docs/: README  README.SOURCE  pysol.6  pysolfc.6
html-src/: accessibility.html  all.htm  assist_options.html  cardset_customization.html  credits.html  credits_old.html  faq.html  ganjifa.html  gen-html.py  general_rules.html  glossary.html  hanafuda.html  hexadeck.html  howtoplay.html  index.html  install.html  intro.html  license.html  news.html  plugins.html  report_bug.html  rules.html  rules_alternate.html  solitaire_wizard.html  solver.html
html-src/rules/: 10x8.html  23skidoo.html  8x8.html  abacus.html  accordion.html  accordionsrevenge.html  aceofhearts.html  acesandkings.html  acessquare.html  acesup.html  acesup5.html  aceyandkingsley.html  acme.html  acquaintance.html  adela.html  admiralspatience.html  aglet.html  agnesbernauer.html  agnessorel.html  agnestwo.html  akbarsconquest.html  akbarstriumph.html  alaska.html  alexanderthegreat.html  algerianpatience.html  algerianpatience3decks.html  alhambra.html  alibaba.html  allinarow.html  allinarowii.html  alternation.html  amazons.html  americancanister.html  americantoad.html  amphibian.html  annodomini.html  antares.html  ants.html  apophis.html  appachanswaterfall.html  (+1044 more)
html-src/wikipedia/: accordion.html  agnes.html  alhambra.html  alternation.html  amazons.html  baroness.html  bigben.html  bisley.html  blockade.html  britishconstitution.html  capricieuse.html  captivequeens.html  colorado.html  contradance.html  curdsandwhey.html  emperor.html  flowergarden.html  fortunesfavor.html  fourseasons.html  frog.html  gate.html  germanpatience.html  grandduchess.html  headsandtails.html  houseinthewood.html  intelligence.html  intrigue.html  kingalbert.html  lanivernaise.html  mountolympus.html  mrsmop.html  napoleonssquare.html  nestor.html  parallels.html  patriarchs.html  perseverance.html  pussinthecorner.html  rougeetnoir.html  royalmarriage.html  saliclaw.html  (+10 more)
kcardgame/: CMakeLists.txt  Makefile  kcardgame.cpp  kcardgame.hpp  minbool_test.py  minimal-binding.txt.in  typesystem_minimal.xml
kcardgame/binding-example/: CMakeLists.txt  bindings.h  bindings.xml  kcardgame.cpp  kcardgame.hpp  main.py  qobjectwithenum.cpp  qobjectwithenum.h
po/: de.po  de_games.po  de_pysol.po  fr_games.po  fr_pysol.po  games.pot  it_games.po  it_pysol.po  pl_games.po  pl_pysol.po  pt_BR.po  pt_BR_games.po  pt_BR_pysol.po  pysol.pot  ru_games.po  ru_pysol.po
pysollib/: Py2Canvas.py  acard.py  actions.py  app.py  app_stat.py  app_stat_result.py  app_statistics.py  cardsetparser.py  customgame.py  formatter.py  game.py  gamedb.py  help.py  hint.py  htmllib2.py  images.py  init.py  kpat_load_save.py  layout.py  main.py  mfxutil.py  move.py  mygettext.py  options.py  pysolaudio.py  pysolrandom.py  pysoltk.py  resource.py  settings.py  speech.py  stack.py  stats.py  struct_new.py  util.py  version.py  wizardpresets.py  wizardutil.py
pysollib/configobj/: configobj.py  validate.py
pysollib/game/: __init__.py  dump.py
pysollib/games/: __init__.py  acesandkings.py  acesup.py  algerian.py  auldlangsyne.py  bakersdozen.py  bakersgame.py  beleagueredcastle.py  bisley.py  bisley13.py  braid.py  bristol.py  buffalobill.py  calculation.py  camelot.py  canfield.py  capricieuse.py  clearthedungeon.py  crossword.py  curdsandwhey.py  daddylonglegs.py  demonsandthieves.py  dieboesesieben.py  diplomat.py  doublets.py  eiffeltower.py  fan.py  fission.py  fortythieves.py  freecell.py  glenwood.py  golf.py  grandduchess.py  grandfathersclock.py  gypsy.py  harp.py  headsandtails.py  hitormiss.py  interlock.py  katzenschwanz.py  (+37 more)
pysollib/kivy/: LApp.py  LBase.py  LImage.py  LObjWrap.py  LTask.py  __init__.py  androidperms.py  androidrot.py  androidtoast.py  card.py  colorsdialog.py  edittextdialog.py  findcarddialog.py  fontsdialog.py  fullpicturedialog.py  gameinfodialog.py  menubar.py  playeroptionsdialog.py  progressbar.py  selectcardset.py  selectgame.py  selecttree.py  solverdialog.py  (+12 more)
scripts/: all_games.py  build.bat  cardconv  cardset_viewer.py  cardsets_to_bundle  cardsetsgiftobmp  create_iss.py  filter-inidivual-importing-tests.pl  gen_individual_importing_tests.py  linux-install.py  mahjongg_utils.py  pygettext.py  refactor-gamedb.pl  refactor1.vim  repack-min-cardsets.bash  test-inside-dist.sh  travis-ci-build
tests/: tap_unittests.py
(+880 files in other folders)
